--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "typescript": "^5.8.3"
   }
 }
